added image and header

--- a/index.html
+++ b/index.html
@@ -5,7 +5,16 @@
 	<meta charset="utf-8">
 </head>
 <body>
-	<main>
+	<header>
+		<nav>
+			<ul>
+				<li><a href="index.html">Homepage</a></li>
+				<li><a href="aboutme.html">About Me</a></li>
+				<li><a href="projects.html">Projects</a></li>
+				<li><a href="skills.html">Skills</a></li>
+				<li><a href="contact.html">Contact Me</a></li>
+			</ul>
+	</header>
 		<div class="title">
 			<h1>Kimberly Dominguez</h1>
 			<h3>Web Developer</h3>
@@ -15,5 +24,4 @@
 				</figure>
 			</div>
 		</div>
-	</main>
 </body>
