updated css folder

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Portfolio</title>
 	<meta charset="utf-8">
+	<link rel="stylesheet" media="screen" href="css/styles.css">
 </head>
 <body>
 	<header>
@@ -20,7 +21,7 @@
 			<h3>Web Developer</h3>
 			<div class="selfie">
 				<figure>
-					<img src="myself.jpg" alt="Protrait picture of myself after graduation">
+					<img src="media/myself.jpg" alt="Protrait picture of myself after graduation">
 				</figure>
 			</div>
 		</div>
